src/App.css
html {
  height: 100%;
}

body {
  height: inherit;
}

#root {
  height: inherit;
}

li {
  list-style: none;
}

ol {
  padding: 0;
}

a {
  color: inherit;
  text-decoration: inherit;
}

.App {
  display: flex;
  flex-direction: column;
  height: inherit;
}

.home-body-images {
  width: 450px;
  height: 250px;
}

#home-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 1 1 auto;
  background: linear-gradient(0.25turn, #3E5C76, #0D1321, #3E5C76);
}

#home-header {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height: 20%;
  margin: 30px;
  color: #F0EBD8;
}

#home-title {
  display: flex;
  justify-content: center;
  font-size: x-large;
}

#header-quotes {
  display: flex;
  justify-content: space-between;
  margin: 0 50px;
  font-family: cursive;
  opacity: .3;
}

#home-body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  color: #F0EBD8;
}

#home-event-items {
  display: flex;
  justify-content: space-evenly;
  margin: 50px 0;
}

#home-sale-event {
  opacity: .6;
}

#home-event-items :hover {
  display: flex;
  position: relative;
  box-shadow: 5px 5px 14px #F0EBD8, -5px -5px 14px #F0EBD8;
}

#home-bundle-items {
  display: flex;
  justify-content: center;
}

#home-bundle-items :hover {
  display: flex;
  justify-content: center;
  position: relative;
  box-shadow: 5px 5px 14px #F0EBD8, -5px -5px 14px #F0EBD8;
}


#shop-page {
  display: flex;
  flex-direction: column;
  height: inherit;
  background: linear-gradient(0.25turn, #3E5C76, #0D1321, #3E5C76);
}

#shopping-cart {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#cart {
  display: flex;
  flex-direction: column;
  justify-content: center;
  overflow: scroll;
}

#cart-items-list {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 80%;
  margin: 1% auto;
  overflow: scroll;
  height: 120px;
  color: #F0EBD8;
}

.cart-items {
  display: flex;
  justify-content: space-between;
}

#checkout-button {
  align-self: flex-end;
  width: 150px;
  margin: 5px 10px;
}

.shop-images {
  height: inherit;
  width: inherit;
}

#shop {
  height: 100%;
  overflow: scroll;
}

#shop-items-list {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  position: relative;
  width: 80%;
  margin: 2% auto;
  padding: 30px 30px;
  overflow: scroll;

}

.shop-items {
  display: flex;
  justify-content: space-between;
  text-align: center;
  border-radius: 5px;
  max-height: 100px;
  color: #F0EBD8;
  transition-duration: 350ms;
}

.shop-items:hover {
  position: relative;
  max-height: 140px;
  font-size: large;
  box-shadow: 5px 5px 14px #F0EBD8, -5px -5px 14px #F0EBD8;
  transition-duration: 350ms;
}

.shop-item-description,
.shop-item-price {
  align-self: center;
  margin-right: 10px;
}

.shop-items>button {
  background-color: rgba(0, 0, 0, 0);
  border: 2px solid #748CAB;
  border-radius: 5px;
  color: #F0EBD8;
}

.shop-items>button:active {
  box-shadow: 5px 5px 14px #0D1321, -5px -5px 14px #0D1321;
}

#game {
  color: #3E5C76;
}

#start {
  color: #748CAB;
}

